feat: edit api and scheduled event
